# str-research

./: load_db.py  pyproject.toml
airbnbscrape/: Dec 2021- California Airport Passenger Traffic.xlsx
airdna/: most_profitable_cities.csv
notebooks/: neighborhoods_.csv  str-research.ipynb  top_cities_CA.csv  top_cities_CA_1_100_20220406_13-48-40.csv  top_cities_CA_1_10_20220406_13-48-23.csv  top_cities_CA_1_500_20220406_13-49-47.csv  top_cities_FL_1_500_20220407_11-38-29.csv  top_cities_TN_1_500_20220407_20-28-34.csv  top_cities_TN_1_500_20240417_10-16-25.csv
notebooks/.ipynb_checkpoints/: str-research-checkpoint.ipynb
