[tool.poetry]
name = "str-research"
version = "0.1.0"
description = ""
authors = ["Cary Greenwood <carygreenwood@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "*"
pandas = "^1.4.2"
jupyter = "^1.0.0"
ipykernel = "^6.12.1"
matplotlib = "*"

[tool.poetry.dev-dependencies]
pytest = "^3.9"
